--- a/index.html
+++ b/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/image.webp" />
+    <link rel="icon" type="image/webp" href="/src/public/image.webp" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=5"
     />
 
-    <title>Books</title>
-    <link
-      rel="preload"
-      as="style"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      onload="this.onload=null;this.rel='stylesheet';"
+    <title>Онлайн-библиотека ОшМПУ — учебники и пособия для студентов</title>
+    <meta
+      name="description"
+      content="Официальная онлайн-библиотека Ошского государственного педагогического университета. Скачать учебники, методические пособия и лекции."
     />
-    <noscript> </noscript>
+
+    <meta
+      property="og:title"
+      content="Онлайн-библиотека ОшМПУ — учебники и пособия для студентов"
+    />
+    <meta
+      property="og:description"
+      content="Официальная онлайн-библиотека Ошского государственного педагогического университета. Скачать учебники, методические пособия и лекции."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mpu.kg/" />
+    <meta property="og:image" content="https://mpu.kg/src/public/image.webp" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Онлайн-библиотека ОшМПУ — учебники и пособия для студентов"
+    />
+    <meta
+      name="twitter:description"
+      content="Официальная онлайн-библиотека Ошского государственного педагогического университета. Скачать учебники, методические пособия и лекции."
+    />
+    <meta name="twitter:image" content="https://mpu.kg/src/public/image.webp" />
+
+    <noscript></noscript>
+
     <script src="https://mapgl.2gis.com/api/js/v1"></script>
   </head>
   <body>
