--- a/index.html
+++ b/index.html
@@ -2,47 +2,48 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/src/public/image.webp" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=5"
-    />
+    <link rel="icon" type="image/webp" href="/src//public/image.webp" />
 
-    <title>Онлайн-библиотека ОшМПУ — учебники и пособия для студентов</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>
+      Онлайн-библиотека ОшМПУ (mpu.kg) — учебники и пособия для студентов (mpu
+      kg)
+    </title>
+
     <meta
       name="description"
-      content="Официальная онлайн-библиотека Ошского государственного педагогического университета. Скачать учебники, методические пособия и лекции."
+      content="Официальная онлайн-библиотека Ошского государственного педагогического университета (ОшМПУ, mpu.kg, mpu kg). Скачать учебники, методические пособия и лекции бесплатно."
     />
 
     <meta
       property="og:title"
-      content="Онлайн-библиотека ОшМПУ — учебники и пособия для студентов"
+      content="Онлайн-библиотека ОшМПУ (mpu.kg) — учебники и пособия"
     />
     <meta
       property="og:description"
-      content="Официальная онлайн-библиотека Ошского государственного педагогического университета. Скачать учебники, методические пособия и лекции."
+      content="Официальная библиотека ОшМПУ. Скачать учебники, пособия, лекции."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mpu.kg/" />
-    <meta property="og:image" content="https://mpu.kg/src/public/image.webp" />
+    <meta property="og:image" content="https://mpu.kg/contacts" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Онлайн-библиотека ОшМПУ — учебники и пособия для студентов"
-    />
+    <meta name="twitter:title" content="Онлайн-библиотека ОшМПУ (mpu.kg)" />
     <meta
       name="twitter:description"
-      content="Официальная онлайн-библиотека Ошского государственного педагогического университета. Скачать учебники, методические пособия и лекции."
+      content="Учебники, пособия, лекции — бесплатно от ОшМПУ."
     />
-    <meta name="twitter:image" content="https://mpu.kg/src/public/image.webp" />
 
-    <noscript></noscript>
+    <link rel="alternate" hreflang="ru-KG" href="https://mpu.kg/" />
 
+    <!-- 2GIS Map -->
     <script src="https://mapgl.2gis.com/api/js/v1"></script>
+
+    <!-- Главный скрипт Vite -->
+    <script type="module" src="/src/main.tsx"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
