--- a/index.html
+++ b/index.html
@@ -2,47 +2,55 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/src//public/image.webp" />
-
+    <link rel="icon" type="image/webp" href="/assets/image-HYL3-ZRm.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>
-      Онлайн-библиотека ОшМПУ (mpu.kg) — учебники и пособия для студентов (mpu
-      kg)
-    </title>
-
+    <title>Онлайн-библиотека ОшМПУ (mpu.kg) — учебники для студентов</title>
     <meta
       name="description"
-      content="Официальная онлайн-библиотека Ошского государственного педагогического университета (ОшМПУ, mpu.kg, mpu kg). Скачать учебники, методические пособия и лекции бесплатно."
+      content="Официальная онлайн-библиотека Ошского государственного педагогического университета (ОшМПУ, mpu.kg). Скачать учебники и лекции бесплатно."
     />
+
+    <div style="display: none" class="top-pic">
+      <div class="top-desc">Онлайн библиотека ОшМПУ</div>
+    </div>
 
     <meta
       property="og:title"
-      content="Онлайн-библиотека ОшМПУ (mpu.kg) — учебники и пособия"
+      content="Онлайн-библиотека ОшМПУ (mpu.kg) — учебники для студентов"
     />
     <meta
       property="og:description"
-      content="Официальная библиотека ОшМПУ. Скачать учебники, пособия, лекции."
+      content="Официальная библиотека ОшМПУ. Скачать учебники и лекции бесплатно."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mpu.kg/" />
-    <meta property="og:image" content="https://mpu.kg/contacts" />
+    <meta
+      property="og:image"
+      content="https://mpu.kg/public/image-HYL3-ZRm.webp"
+    />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Онлайн-библиотека ОшМПУ (mpu.kg)" />
     <meta
       name="twitter:description"
-      content="Учебники, пособия, лекции — бесплатно от ОшМПУ."
+      content="Учебники и лекции бесплатно от ОшМПУ."
+    />
+    <meta
+      name="twitter:image"
+      content="https://mpu.kg/public/image-HYL3-ZRm.webp"
     />
 
+    <!-- Альтернативная локализация -->
     <link rel="alternate" hreflang="ru-KG" href="https://mpu.kg/" />
 
     <!-- 2GIS Map -->
     <script src="https://mapgl.2gis.com/api/js/v1"></script>
 
-    <!-- Главный скрипт Vite -->
     <script type="module" src="/src/main.tsx"></script>
   </head>
+
   <body>
     <div id="root"></div>
   </body>
