add google site search

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <meta
+      name="google-site-verification"
+      content="6bMOnMV9e1L3XqVvR2tD2sJ8K9pQ5rT8uY7iU6yT5rE4wQ2aS1dF3gH5jK8lM9nO0p"
+    />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/assets/image-HYL3-ZRm.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
