--- a/index.html
+++ b/index.html
@@ -1,60 +1,86 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <!-- Google верификация -->
     <meta
       name="google-site-verification"
       content="6bMOnMV9e1L3XqVvR2tD2sJ8K9pQ5rT8uY7iU6yT5rE4wQ2aS1dF3gH5jK8lM9nO0p"
     />
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/assets/image-HYL3-ZRm.webp" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Онлайн-библиотека ОшМПУ (mpu.kg) — учебники для студентов</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/webp" href="/assets/image-HYL3-ZRm.webp" />
+
+    <!-- === РУССКИЙ ВАРИАНТ (основной) === -->
+    <title>Онлайн библиотека ОшМПУ — Учебники бесплатно | mpu.kg</title>
     <meta
       name="description"
-      content="Официальная онлайн-библиотека Ошского государственного педагогического университета (ОшМПУ, mpu.kg). Скачать учебники и лекции бесплатно."
+      content="Официальная онлайн-библиотека ОшМПУ. Скачать учебники, лекции, книги для студентов бесплатно. Кыргызстан, Ош."
+    />
+    <meta
+      name="keywords"
+      content="онлайн библиотека ОшМПУ, учебники мпу, ошмпу книги, скачать учебники бесплатно, mpu.kg, Ошский университет"
     />
 
-    <div style="display: none" class="top-pic">
-      <div class="top-desc">Онлайн библиотека ОшМПУ</div>
-    </div>
+    <!-- === КЫРГЫЗСКИЙ ВАРИАНТ (для Яндекса и Google KG) === -->
+    <meta
+      name="title_ky"
+      content="ОшМПУ онлайн китепканасы — Акысыз окуу китептери | mpu.kg"
+    />
+    <meta
+      name="description_ky"
+      content="ОшМПУнун расмий онлайн китепканасы. Студенттер үчүн акысыз окуу китептерин, лекцияларды жүктөп алыңыз. Кыргызстан, Ош."
+    />
+    <meta
+      name="keywords_ky"
+      content="онлайн китепкана ОшМПУ, mpu китептер, ошмпу китепканасы, акысыз окуу китептери, mpu.kg китепкана"
+    />
 
     <meta
       property="og:title"
-      content="Онлайн-библиотека ОшМПУ (mpu.kg) — учебники для студентов"
+      content="Онлайн библиотека ОшМПУ — Учебники бесплатно"
     />
     <meta
       property="og:description"
-      content="Официальная библиотека ОшМПУ. Скачать учебники и лекции бесплатно."
+      content="Официальная библиотека ОшМПУ. Более 1000 учебников в PDF. Скачать бесплатно!"
     />
-    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mpu.kg/" />
     <meta
       property="og:image"
-      content="https://mpu.kg/public/image-HYL3-ZRm.webp"
+      content="https://mpu.kg/assets/image-HYL3-ZRm.webp"
     />
+    <meta property="og:site_name" content="ОшМПУ онлайн китепканасы" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:locale:alternate" content="ky_KG" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Онлайн-библиотека ОшМПУ (mpu.kg)" />
+    <meta
+      name="twitter:title"
+      content="ОшМПУ онлайн китепканасы — Акысыз окуу китептери"
+    />
     <meta
       name="twitter:description"
-      content="Учебники и лекции бесплатно от ОшМПУ."
+      content="ОшМПУнун расмий китепканасы. Акысыз жүктөп алыңыз!"
     />
     <meta
       name="twitter:image"
-      content="https://mpu.kg/public/image-HYL3-ZRm.webp"
+      content="https://mpu.kg/assets/image-HYL3-ZRm.webp"
     />
 
-    <!-- Альтернативная локализация -->
-    <link rel="alternate" hreflang="ru-KG" href="https://mpu.kg/" />
+    <!-- Языковые версии (hreflang) -->
+    <link rel="alternate" hreflang="ru" href="https://mpu.kg/" />
+    <link rel="alternate" hreflang="ky" href="https://mpu.kg/ky/" />
+    <link rel="alternate" hreflang="x-default" href="https://mpu.kg/" />
 
-    <!-- 2GIS Map -->
+    <!-- Каноническая ссылка -->
+    <link rel="canonical" href="https://mpu.kg/" />
+
+    <!-- 2GIS -->
     <script src="https://mapgl.2gis.com/api/js/v1"></script>
-
     <script type="module" src="/src/main.tsx"></script>
   </head>
-
   <body>
     <div id="root"></div>
   </body>
