--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/webp" href="/assets/image-HYL3-ZRm.webp" />
+    <link rel="icon" type="image/webp" href="/public/image.webp" />
 
-    <!-- === РУССКИЙ ВАРИАНТ (основной) === -->
     <title>Онлайн библиотека ОшМПУ — Учебники бесплатно | mpu.kg</title>
     <meta
       name="description"
@@ -45,8 +44,18 @@
       content="Официальная библиотека ОшМПУ. Более 1000 учебников в PDF. Скачать бесплатно!"
     />
     <meta property="og:url" content="https://mpu.kg/" />
+    <!-- OG-IMAGE ДЛЯ КАРТИНКИ В ГУГЛЕ -->
     <meta
       property="og:image"
+      content="https://mpu.kg/assets/image-HYL3-ZRm.webp"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Онлайн библиотека ОшМПУ — логотип" />
+
+    <!-- Twitter (для красивых карточек) -->
+    <meta
+      name="twitter:image"
       content="https://mpu.kg/assets/image-HYL3-ZRm.webp"
     />
     <meta property="og:site_name" content="ОшМПУ онлайн китепканасы" />
