--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <!-- Google верификация -->
     <meta
       name="google-site-verification"
       content="6bMOnMV9e1L3XqVvR2tD2sJ8K9pQ5rT8uY7iU6yT5rE4wQ2aS1dF3gH5jK8lM9nO0p"
@@ -9,7 +8,12 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/webp" href="/public/image.webp" />
+    <link
+      rel="icon"
+      type="image/webp"
+      href="/public/image.webp"
+      sizes="48x48"
+    />
 
     <title>Онлайн библиотека ОшМПУ — Учебники бесплатно | mpu.kg</title>
     <meta
@@ -21,7 +25,6 @@
       content="онлайн библиотека ОшМПУ, учебники мпу, ошмпу книги, скачать учебники бесплатно, mpu.kg, Ошский университет"
     />
 
-    <!-- === КЫРГЫЗСКИЙ ВАРИАНТ (для Яндекса и Google KG) === -->
     <meta
       name="title_ky"
       content="ОшМПУ онлайн китепканасы — Акысыз окуу китептери | mpu.kg"
@@ -44,16 +47,17 @@
       content="Официальная библиотека ОшМПУ. Более 1000 учебников в PDF. Скачать бесплатно!"
     />
     <meta property="og:url" content="https://mpu.kg/" />
-    <!-- OG-IMAGE ДЛЯ КАРТИНКИ В ГУГЛЕ -->
     <meta
       property="og:image"
-      content="https://mpu.kg/assets/image-HYL3-ZRm.webp"
+      content="https://mpu.kg/assets/mpu-og-image.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Онлайн библиотека ОшМПУ — логотип" />
-
-    <!-- Twitter (для красивых карточек) -->
+    <meta property="og:image:alt" content="ОшМПУ онлайн китепканасы" />
+    <meta
+      name="twitter:image"
+      content="https://mpu.kg/assets/mpu-og-image.jpg"
+    />
     <meta
       name="twitter:image"
       content="https://mpu.kg/assets/image-HYL3-ZRm.webp"
@@ -63,7 +67,6 @@
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:locale:alternate" content="ky_KG" />
 
-    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -78,15 +81,12 @@
       content="https://mpu.kg/assets/image-HYL3-ZRm.webp"
     />
 
-    <!-- Языковые версии (hreflang) -->
     <link rel="alternate" hreflang="ru" href="https://mpu.kg/" />
     <link rel="alternate" hreflang="ky" href="https://mpu.kg/ky/" />
     <link rel="alternate" hreflang="x-default" href="https://mpu.kg/" />
 
-    <!-- Каноническая ссылка -->
     <link rel="canonical" href="https://mpu.kg/" />
 
-    <!-- 2GIS -->
     <script src="https://mapgl.2gis.com/api/js/v1"></script>
     <script type="module" src="/src/main.tsx"></script>
   </head>
